deplacement fichier css script et images

--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -6,10 +6,7 @@
   <div class="background-image"></div>
   <div class="header-container">
     <div class="logo">
-      <img
-        src="{{ asset('assets/images/logo/logoArcadia.png') }}"
-        alt="ArcadiaLogo"
-      />
+      <img src="{{ asset('images/logo/logoArcadia.png') }}" alt="ArcadiaLogo" />
     </div>
     <nav class="header-nav">
       <ul>
@@ -41,7 +38,7 @@
     <a href="#" id="logo-burger-button">
       <img
         id="logo-burger"
-        src="{{ asset('assets/images/logo/LOGO.png') }}"
+        src="{{ asset('images/logo/LOGO.png') }}"
         alt="logo-burger"
         height="40px"
         width="40px"
