--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -43,7 +43,7 @@
           <div class="cadre-3d">
             <img
               id="main-image"
-              src="{{ asset('assets/images/jungle/tigre.jpg') }}"
+              src="{{ asset('images/jungle/tigre.jpg') }}"
               alt="Tigre"
               class="img-fluid"
             />
@@ -64,7 +64,7 @@
       <div class="col-lg-4">
         <div class="rectangle">
           <img
-            src="{{ asset('assets/images/savane/lion.jpg') }}"
+            src="{{ asset('images/savane/lion.jpg') }}"
             alt="Image 1"
             class="image img-fluid"
           />
@@ -75,7 +75,7 @@
             </p>
             <a href="{{ path('app_savane') }}#lion"
               >En savoir plus...<img
-                src="{{ asset('assets/images/logo/iconeLien.png') }}"
+                src="{{ asset('images/logo/iconeLien.png') }}"
                 alt="Logo En Savoir Plus"
             /></a>
           </div>
@@ -84,7 +84,7 @@
       <div class="col-lg-4">
         <div class="rectangle">
           <img
-            src="{{ asset('assets/images/marais/crocodilenil.jpg') }}"
+            src="{{ asset('images/marais/crocodilenil.jpg') }}"
             alt="Image 2"
             class="image img-fluid"
           />
@@ -92,7 +92,7 @@
             <p>Explorez le monde mystérieux des crocodiles des marais</p>
             <a href="{{ path('app_marais') }}#croco"
               >En savoir plus...<img
-                src="{{ asset('assets/images/logo/iconeLien.png') }}"
+                src="{{ asset('images/logo/iconeLien.png') }}"
                 alt="Logo En Savoir Plus"
             /></a>
           </div>
@@ -101,7 +101,7 @@
       <div class="col-lg-4">
         <div class="rectangle">
           <img
-            src="{{ asset('assets/images/montagne/loup.jpg') }}"
+            src="{{ asset('images/montagne/loup.jpg') }}"
             alt="Image 3"
             class="image img-fluid"
           />
@@ -112,7 +112,7 @@
             </p>
             <a href="{{ path('app_mountain') }}#loup"
               >En savoir plus...<img
-                src="{{ asset('assets/images/logo/iconeLien.png') }}"
+                src="{{ asset('images/logo/iconeLien.png') }}"
                 alt="Logo En Savoir Plus"
             /></a>
           </div>
