--- a/templates/jungle/index.html.twig
+++ b/templates/jungle/index.html.twig
@@ -70,7 +70,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/jungle/anaconda.jpg') }}"
+          src="{{ asset('images/jungle/anaconda.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -79,7 +79,7 @@ content %}
     <div class="service2">
       <article class="service">
         <img
-          src="{{ asset('assets/images/jungle/jaguar.jpg') }}"
+          src="{{ asset('images/jungle/jaguar.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -140,7 +140,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/jungle/macaque.jpg') }}"
+          src="{{ asset('images/jungle/macaque.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -149,7 +149,7 @@ content %}
     <div class="service4">
       <article class="service">
         <img
-          src="{{ asset('assets/images/jungle/perroquet.jpg') }}"
+          src="{{ asset('images/jungle/perroquet.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -210,7 +210,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/jungle/tigre.jpg') }}"
+          src="{{ asset('images/jungle/tigre.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
