--- a/templates/marais/index.html.twig
+++ b/templates/marais/index.html.twig
@@ -72,7 +72,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/marais/castor.jpg') }}"
+          src="{{ asset('images/marais/castor.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -82,7 +82,7 @@ content %}
     <div class="service2" id="croco">
       <article class="service">
         <img
-          src="{{ asset('assets/images/marais/crocodilenil.jpg') }}"
+          src="{{ asset('images/marais/crocodilenil.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -144,7 +144,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/marais/hipopotame.jpg') }}"
+          src="{{ asset('images/marais/hipopotame.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -154,7 +154,7 @@ content %}
     <div class="service4">
       <article class="service">
         <img
-          src="{{ asset('assets/images/marais/lamantin.jpg') }}"
+          src="{{ asset('images/marais/lamantin.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -216,7 +216,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/marais/tortuecalifornie.jpg') }}"
+          src="{{ asset('images/marais/tortuecalifornie.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
