--- a/templates/savane/index.html.twig
+++ b/templates/savane/index.html.twig
@@ -71,7 +71,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/savane/elephant.jpg') }}"
+          src="{{ asset('images/savane/elephant.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -81,7 +81,7 @@ content %}
     <div class="service2">
       <article class="service">
         <img
-          src="{{ asset('assets/images/savane/girafe.jpg') }}"
+          src="{{ asset('images/savane/girafe.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -155,7 +155,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/savane/guepard.jpg') }}"
+          src="{{ asset('images/savane/guepard.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -165,7 +165,7 @@ content %}
     <div class="service4" id="lion">
       <article class="service">
         <img
-          src="{{ asset('assets/images/savane/lion.jpg') }}"
+          src="{{ asset('images/savane/lion.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -227,7 +227,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/savane/rhinoceros.jpg') }}"
+          src="{{ asset('images/savane/rhinoceros.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -237,7 +237,7 @@ content %}
     <div class="service6">
       <article class="service">
         <img
-          src="{{ asset('assets/images/savane/zèbre.jpg') }}"
+          src="{{ asset('images/savane/zèbre.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
