--- a/templates/services/index.html.twig
+++ b/templates/services/index.html.twig
@@ -40,7 +40,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/services/billet.jpg') }}"
+          src="{{ asset('images/services/billet.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -51,7 +51,7 @@ content %}
     <div class="service2">
       <article class="service">
         <img
-          src="{{ asset('assets/images/services/zoo.jpg') }}"
+          src="{{ asset('images/services/zoo.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -74,7 +74,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/services/minitrain.jpg') }}"
+          src="{{ asset('images/services/minitrain.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -85,7 +85,7 @@ content %}
     <div class="service4" id="guide">
       <article class="service">
         <img
-          src="{{ asset('assets/images/services/guide.jpg') }}"
+          src="{{ asset('images/services/guide.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -104,7 +104,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/services/restaurant.jpg') }}"
+          src="{{ asset('images/services/restaurant.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
