--- a/templates/user_base.html.twig
+++ b/templates/user_base.html.twig
@@ -26,6 +26,6 @@
     <footer>
       <!-- footer si besoin -->
     </footer>
-    <script src="{{ asset('assets/script/user.js') }}"></script>
+    <script src="{{ asset('script/user.js') }}"></script>
   </body>
 </html>
