--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,6 +24,6 @@
     <main>{% block content %}{% endblock %}</main>
 
     {% include 'footer.html.twig' %}
-    <script src="{{ asset('assets/script/script.js') }}"></script>
+    <script src="{{ asset('script/script.js') }}"></script>
   </body>
 </html>
