--- a/templates/desert/index.html.twig
+++ b/templates/desert/index.html.twig
@@ -71,7 +71,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/desert/viperedesert.jpg') }}"
+          src="{{ asset('images/desert/viperedesert.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -81,7 +81,7 @@ content %}
     <div class="service2">
       <article class="service">
         <img
-          src="{{ asset('assets/images/desert/fenec.jpg') }}"
+          src="{{ asset('images/desert/fenec.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -143,7 +143,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/desert/cobraroyal.jpg') }}"
+          src="{{ asset('images/desert/cobraroyal.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -153,7 +153,7 @@ content %}
     <div class="service4">
       <article class="service">
         <img
-          src="{{ asset('assets/images/desert/dromadaire.jpg') }}"
+          src="{{ asset('images/desert/dromadaire.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -215,7 +215,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/desert/iguanedesert.jpg') }}"
+          src="{{ asset('images/desert/iguanedesert.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
