--- a/templates/mountain/index.html.twig
+++ b/templates/mountain/index.html.twig
@@ -71,7 +71,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/montagne/aigleroyal.jpg') }}"
+          src="{{ asset('images/montagne/aigleroyal.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -81,7 +81,7 @@ content %}
     <div class="service2">
       <article class="service">
         <img
-          src="{{ asset('assets/images/montagne/bouquetin.jpg') }}"
+          src="{{ asset('images/montagne/bouquetin.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -143,7 +143,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/montagne/chamois.jpg') }}"
+          src="{{ asset('images/montagne/chamois.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -153,7 +153,7 @@ content %}
     <div class="service4" id="loup">
       <article class="service">
         <img
-          src="{{ asset('assets/images/montagne/loup.jpg') }}"
+          src="{{ asset('images/montagne/loup.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
@@ -215,7 +215,7 @@ content %}
       </article>
       <article class="service">
         <img
-          src="{{ asset('assets/images/montagne/marmotte.jpg') }}"
+          src="{{ asset('images/montagne/marmotte.jpg') }}"
           onclick="agrandirImage(this)"
         />
       </article>
