ajout css mobile display none note label + modification texte d'accueil

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1070,6 +1070,10 @@ button.jaime-btn:hover {
     margin: 0 5px;
   }
 
+  .note-label {
+    display: none;
+  }
+
   .btn.btn-submit,
   .btn.btn-success {
     width: 100%;
